--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
 
 	<!-------->
 
@@ -24,7 +24,7 @@
 
 
 		.navMenu {
-			font-family: 'Advent Pro', sans-serif;
+			font-family: 'Roboto Mono', monospace;
 			padding: 8px;
 			text-align: center;
 			margin: 7px auto;
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #272727;
+			color: #83d8f2;
 			text-decoration: none;
 			text-transform: uppercase;
 			display: inline-block;
@@ -44,7 +44,7 @@
 		}
 
 		.border {
-			border: 1px solid #cccccc;
+			border: 2px solid #cccccc;
 
 		}
 
@@ -58,11 +58,11 @@
 <body>
 
 	<nav class="navMenu  border">
-		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i>Home</a>
-		<a id="WhatsApp" onclick="navigate(this.id)" href="#"> <i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
-		<a id="ChatGPT" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-robot"></i>GPT</a>
-		<a id="Hubspot" onclick="navigate(this.id)" href="#"><i class="fa-brands fa-hubspot"></i>Hubspot</a>
-		<a id="Prompts" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-terminal"></i>Prompts</a>
+		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
+		<a id="WhatsApp" onclick="navigate(this.id)" href="#"> <i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
+		<a id="ChatGPT" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-robot"></i> GPT</a>
+		<a id="Hubspot" onclick="navigate(this.id)" href="#"><i class="fa-brands fa-hubspot"></i> Hubspot</a>
+		<a id="Prompts" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-terminal"></i> Prompts</a>
 		<a id="Mail" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-envelope"></i>Mail</a>
 		
 
