--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 		.navMenu a {
 			color: #83d8f2;
 			text-decoration: none;
-			text-transform: uppercase;
 			display: inline-block;
 			padding: 6px;
 		}
@@ -44,7 +43,9 @@
 		}
 
 		.border {
-			border: 2px solid #cccccc;
+			border: 2px solid #ae5bbd;
+			box-shadow: 2px 2px 1px 0px #000000;
+   			border-radius: 5px;
 
 		}
 
