--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		}
 
 		.border {
-			border: 2px solid #ae5bbd;
+			border: 2px solid #000000;
 			box-shadow: 2px 2px 1px 0px #000000;
    			border-radius: 5px;
 
@@ -51,7 +51,7 @@
 
 		.navMenu a:hover {
 
-			color: #d09c0b;
+			color: #ae5bbd;
 		}
 	</style>
 </head>
