--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		}
 
 		.navMenu a {
-			color: #83d8f2;
+			color: #9266ad;
 			text-decoration: none;
 			display: inline-block;
 			padding: 6px;
