--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
 	<nav class="navMenu  border">
 		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
 		<a id="WhatsApp" onclick="navigate(this.id)" href="#"> <i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-		<a id="ChatGPT" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-robot"></i> GPT</a>
+		<a id="Prompts" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-robot"></i> GPT</a>
 		<a id="Hubspot" onclick="navigate(this.id)" href="#"><i class="fa-brands fa-hubspot"></i> Hubspot</a>
-		<a id="Prompts" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-terminal"></i> Prompts</a>
+		<a id="Archivo" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-terminal"></i> Prompts</a>
 		<a id="Mail" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-envelope"></i> Mail</a>
-		
+		<a id="Journal" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-book-journal-whills"></i> Journal</a>
+		<a id="Finance" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-dollar-sign"></i>Journal</a>
+		<a id="Podcast" onclick="navigate(this.id)" href="#"><i class="fa-light fa-podcast"></i>Journal</a>
 
 		
 	</nav>
@@ -85,15 +87,20 @@
 				window.open("https://example.com", '_blank').focus();
 			else if (id == "WhatsApp")
 				window.open("https://web.whatsapp.com/", '_blank').focus();
-			else if (id == "ChatGPT")
-				window.open("https://chat.openai.com/", '_blank').focus();
+			else if (id == "Prompts")
+				window.open("https://www.notion.so/Prompts-a563fa71a5d0472d860a1f229e5a9c33", '_blank').focus();
 			else if (id == "Hubspot")
 				window.open("https://app.hubspot.com/reports-dashboard/23480943/view/11511274", '_blank').focus();
-			else if (id == "Prompts")
-				window.open("https://www.notion.so/Prompts-7530bf2b0c1c47e78146d86584c5f440", '_blank').focus();
+			else if (id == "Archivo")
+				window.open("https://www.notion.so/Prompts-a563fa71a5d0472d860a1f229e5a9c33", '_blank').focus();
 			else if (id == "Mail")
 				window.open("https://mail.google.com/mail/u/0/#inbox", '_blank').focus();
-
+			else if (id == "Journal")
+				window.open("https://www.notion.so/Journal-326817c20be34c2a99483861bcf9fcb9", '_blank').focus();
+			else if (id == "Finance")
+				window.open("https://www.notion.so/Report-da1a05bb2a6f48f8a3078953dc43cfcd", '_blank').focus();
+			else if (id == "Podcast")
+				window.open("https://www.notion.so/Books-Podcast-ca5abc6fc63d495bad4d1d07cbab93f4", '_blank').focus();
 		}
 	</script>
 
