--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 	<nav class="navMenu  border">
 		<a id="home" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-house"></i> Home</a>
 		<a id="WhatsApp" onclick="navigate(this.id)" href="#"> <i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-		<a id="Prompts" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-robot"></i> GPT</a>
+		<a id="Prompts" onclick="navigate(this.id)" href="#"> <i class="fa-solid fa-robot"></i> Prompts</a>
 		<a id="Hubspot" onclick="navigate(this.id)" href="#"><i class="fa-brands fa-hubspot"></i> Hubspot</a>
-		<a id="Archivo" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-terminal"></i> Prompts</a>
 		<a id="Mail" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-envelope"></i> Mail</a>
 		<a id="Journal" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-book-journal-whills"></i> Journal</a>
-		<a id="Finance" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-dollar-sign"></i>Journal</a>
-		<a id="Podcast" onclick="navigate(this.id)" href="#"><i class="fa-light fa-podcast"></i>Journal</a>
+		<a id="Finance" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-dollar-sign"></i>Finanzas</a>
+		<a id="Podcast" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-lightbulb"></i>Read</a>
+		<a id="Archivo" onclick="navigate(this.id)" href="#"><i class="fa-solid fa-terminal"></i> Archivo</a>
 
 		
 	</nav>
